[gd_scene load_steps=5 format=2]

[ext_resource path="res://64x64_black.png" type="Texture" id=1]
[ext_resource path="res://64x64_red.jpg" type="Texture" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]

[sub_resource type="TileSet" id=1]
0/name = "64x64_black.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 8, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "64x64_red.jpg 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 8, 8, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 560.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_top = -48.0
margin_right = 1024.0
margin_bottom = 40.0
color = Color( 0.227451, 0.227451, 0.227451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Control/ColorRect"]
margin_left = 16.0
margin_top = 16.0
margin_right = 57.0
margin_bottom = 36.0
text = "Start"

[node name="TickButton" type="Button" parent="Control/ColorRect"]
margin_left = 72.0
margin_top = 16.0
margin_right = 84.0
margin_bottom = 36.0
text = "Tick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedSlider" type="HSlider" parent="Control/ColorRect"]
margin_left = 16.0
margin_top = 56.0
margin_right = 248.0
margin_bottom = 72.0
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="Control/ColorRect"]
margin_left = 256.0
margin_top = 56.0
margin_right = 296.0
margin_bottom = 70.0
text = "0.1 seconds"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_up" from="Control/ColorRect/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="Control/ColorRect/TickButton" to="." method="_on_TickButton_button_up"]
[connection signal="value_changed" from="Control/ColorRect/SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
